core.autocrlf=input & some hg tweaks

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,6 @@
 	token = 03ad2db03dbaafb1e7ed6edab845a7fb
 [color]
 	interactive = auto
+[alias]
+	glog = log --graph --abbrev-commit
+	olog = log --pretty=oneline
