--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,12 @@
 [github]
 	user = okertanov
 	token = 03ad2db03dbaafb1e7ed6edab845a7fb
+[core]
+	autocrlf = input
 [color]
-	interactive = auto
+    interactive = auto
+[svn]
+#	authorsfile = .gitauthors
 [alias]
 	glog = log --graph --abbrev-commit
 	olog = log --pretty=oneline
