--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,8 @@
 	user = okertanov
 	token = 03ad2db03dbaafb1e7ed6edab845a7fb
 [core]
-	autocrlf = input
+    autocrlf = input
+    pager =
 [color]
     interactive = auto
 [svn]
