.gitconfig updated by Git Extensions

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,18 +1,26 @@
 [user]
-    name = okertanov
-    email = okertanov@gmail.com
+	name = okertanov
+	email = okertanov@gmail.com
 [github]
-    user = okertanov
-    token = 03ad2db03dbaafb1e7ed6edab845a7fb
+	user = okertanov
+	token = 03ad2db03dbaafb1e7ed6edab845a7fb
 [core]
-    autocrlf = input
-    whitespace = -trailing-space,-space-before-tab
-    pager =
+	autocrlf = input
+	whitespace = -trailing-space,-space-before-tab
+	pager = 
+	editor = gvim
 [color]
-    interactive = auto
+	interactive = auto
 [svn]
-    #authorsfile = .gitauthors
+	#authorsfile = .gitauthors
 [alias]
-    glog = log --graph --abbrev-commit
-    olog = log --pretty=oneline
-
+	glog = log --graph --abbrev-commit
+	olog = log --pretty=oneline
+[merge]
+	tool = kdiff3
+[diff]
+	guitool = kdiff3
+[difftool "kdiff3"]
+	path = C:/tools/KDiff3/kdiff3.exe
+[mergetool "kdiff3"]
+	path = C:/tools/KDiff3/kdiff3.exe
