revert back gvim to vim

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	autocrlf = input
 	whitespace = -trailing-space,-space-before-tab
 	pager = 
-	editor = gvim
+	editor = vim
 [color]
 	interactive = auto
 [svn]
