--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".vim/bundle/vim-markdown"]
 	path = .vim/bundle/vim-markdown
 	url = git://github.com/plasticboy/vim-markdown.git
+[submodule ".vim/bundle/vim-pipe"]
+	path = .vim/bundle/vim-pipe
+	url = git://github.com/krisajenkins/vim-pipe.git
