--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 	safecrlf = true
 	whitespace = -trailing-space,-space-before-tab
 	pager = 
-	editor = gvim
+	editor = vim
 [color]
 	interactive = auto
 [svn]
