--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,8 @@
     whitespace = -trailing-space,-space-before-tab
     pager =
     editor = vim
+[branch]
+    autosetuprebase = always
 [push]
     default = simple
 [color]
