.gitconfig .emacs fixes

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
     whitespace = -trailing-space,-space-before-tab
     pager =
     editor = vim
+	excludesfile = /Users/okertanov/.gitignore_global
 [push]
     default = simple
 [color]
@@ -38,3 +39,9 @@
     prompt = false
 [mergetool "bcomp"]
     cmd = bcomp "$LOCAL" "$REMOTE" "$BASE" "$MERGED"
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
