--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,8 @@
     whitespace = -trailing-space,-space-before-tab
     pager =
     editor = vim
-	excludesfile = /Users/okertanov/.gitignore_global
+[branch]
+    autosetuprebase = always
 [push]
     default = simple
 [color]
